--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -32,6 +32,7 @@
 		"elysia": "1.2.5",
 		"pg": "^8.15.6",
 		"pino-elasticsearch": "^8.1.0",
+		"pino-loki": "^2.5.0",
 		"pino-pretty": "^11.3.0",
 		"pino-roll": "^2.2.0",
 		"postgres": "^3.4.5",
