--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,6 +21,7 @@
 		"@hookform/resolvers": "^3.10.0",
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
+		"@next/bundle-analyzer": "^15.3.2",
 		"@next/mdx": "^15.0.3",
 		"@number-flow/react": "^0.5.4",
 		"@radix-ui/react-accordion": "^1.2.3",
@@ -69,8 +70,11 @@
 		"negotiator": "^1.0.0",
 		"next": "^14.2.23",
 		"next-intl": "^3.24.0",
+		"next-logger": "^5.0.1",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
+		"pino": "^9.6.0",
+		"pino-loki": "^2.5.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
