--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM oven/bun AS base
+FROM oven/bun:latest AS base
 WORKDIR /usr/src/app
 
 FROM base AS install
@@ -7,19 +7,12 @@ RUN mkdir -p /temp/prod
 COPY package.json bun.lock /temp/prod/
 RUN cd /temp/prod && bun install --production
 
-FROM base AS prerelease
-COPY --from=install /temp/prod/node_modules node_modules
-COPY . .
-
-ENV NODE_ENV=production
-RUN bun test
-RUN bun run build
-
 FROM base AS release
 COPY --from=install /temp/prod/node_modules node_modules
-COPY --from=prerelease /usr/src/app/index.ts .
-COPY --from=prerelease /usr/src/app/package.json .
+COPY --from=install /temp/prod/package.json .
+
+COPY . .
 
 USER bun
 EXPOSE 4000
-ENTRYPOINT [ "bun", "run", "index.ts" ]
+ENTRYPOINT [ "bun", "index.ts" ]
