refactor: edit docker

--- a/apps/ai-service/Dockerfile
+++ b/apps/ai-service/Dockerfile
@@ -1,41 +1,62 @@
-# Use an official Python runtime as a parent image
-FROM python:3.10-slim
+# Stage 1: Builder
+FROM python:3.10-slim AS builder
 
 ENV PYTHONUNBUFFERED=1
 
-# Install system dependencies
+# Install build dependencies
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
     libglib2.0-0 \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
 WORKDIR /app
 
-# Copy the application requirements
-COPY requirements.txt .
+# Copy requirements and install to virtual environments
+COPY requirements.txt ./
+RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
-# Install dependencies (for both the app and system-wide)
-RUN pip install --no-cache-dir -r requirements.txt
+# Clone yolov5 manually to avoid overwrite
+RUN git clone https://github.com/ultralytics/yolov5 /app/yolov5
 
-COPY . .
-# Clone YOLOv5 after copying project to prevent overwrite
-RUN if [ ! -d "app/services/model/yolov5" ]; then \
-      git clone https://github.com/ultralytics/yolov5 app/services/model/yolov5; \
-    fi
-
-# Set up virtual environments and install dependencies
+# Create yolov5 venv
 RUN python -m venv /app/yolov5_venv && \
-    /app/yolov5_venv/bin/python -m pip install --no-cache-dir -r /app/app/services/model/yolov5/requirements.txt && \
-    python -m venv /app/yolov8_venv && \
-    /app/yolov8_venv/bin/python -m pip install --no-cache-dir ultralytics==8.2.103 && \
-    python -m venv /app/yolov11_venv && \
-    /app/yolov11_venv/bin/python -m pip install --no-cache-dir "ultralytics<=8.3.40" supervision roboflow
+    /app/yolov5_venv/bin/pip install --no-cache-dir -r /app/yolov5/requirements.txt
 
+# Create yolov8 venv
+RUN python -m venv /app/yolov8_venv && \
+    /app/yolov8_venv/bin/pip install --no-cache-dir ultralytics==8.2.103
 
-# Expose the FastAPI app port
-EXPOSE 80
+# Create yolov11 venv
+RUN python -m venv /app/yolov11_venv && \
+    /app/yolov11_venv/bin/pip install --no-cache-dir "ultralytics<=8.3.40" supervision roboflow
 
-# Start the FastAPI app
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+# Stage 2: Final minimal image
+FROM python:3.10-slim AS runtime
+
+ENV PYTHONUNBUFFERED=1
+
+# Install only necessary system libraries
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+# Copy installed packages from builder
+COPY --from=builder /usr/local/lib/python3.10 /usr/local/lib/python3.10
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Copy the venvs
+COPY --from=builder /app/yolov5_venv /app/yolov5_venv
+COPY --from=builder /app/yolov8_venv /app/yolov8_venv
+COPY --from=builder /app/yolov11_venv /app/yolov11_venv
+
+# Copy app source
+COPY . /app
+COPY --from=builder /app/yolov5 /app/app/services/model/yolov5
+
+EXPOSE 8000
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
