--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -11,6 +11,10 @@ GOOGLE_CLIENT_SECRET=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
 # Application Settings
 APP_PORT=4000
 
+# Frontend
+FRONTEND_URL=http://localhost:3000
+FRONTEND_SERVER_URL=http://frontend-app:3000
+
 # Database Configuration
 POSTGRES_HOST=postgres
 POSTGRES_LOCAL_HOST=127.0.0.1
