--- a/apps/frontend/.env
+++ b/apps/frontend/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:4000
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
-NEXT_SERVER_BACKEND_URL=http://backend_app:4000
+NEXT_SERVER_BACKEND_URL=http://backend-app:4000
