--- a/kubenetes/frontend-app.yaml
+++ b/kubenetes/frontend-app.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend-app
-          image: frontend_app:latest
+          image: frontend-app:latest
           ports:
             - containerPort: 3000
           volumeMounts:
