--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -7,29 +7,15 @@ WORKDIR /app
 ENV NODE_ENV=production
 
 COPY package.json package-lock.json ./
+RUN npm install -g npm@latest
+RUN npm install @tailwindcss/oxide-linux-arm64-gnu
+RUN npm install lightningcss-linux-arm64-gnu
+RUN npm install @tailwindcss/oxide-linux-x86-gnu
+RUN npm install lightningcss-linux-x86-gnu
+
 RUN npm ci --prefer-offline
 
 COPY . .
 RUN npm run build
 
-# ===============================
-# Stage 2: Production runtime
-# ===============================
-FROM node:20-slim AS runner
-WORKDIR /app
-
-ENV NODE_ENV=production
-ENV PORT=3000
-ENV NODE_OPTIONS=--max-old-space-size=512
-
-# Optional: add tini for PID 1 stability
-RUN apt-get update && apt-get install -y --no-install-recommends tini && apt-get clean && rm -rf /var/lib/apt/lists/*
-ENTRYPOINT ["/usr/bin/tini", "--"]
-
-# Copy standalone output only
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static .next/static
-COPY --from=builder /app/public ./public
-
-EXPOSE 3000
-CMD ["node", "server.js"]
+CMD ["npm", "run", "start"]
