--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -104,7 +104,7 @@
 		"@storybook/react": "^8.4.1",
 		"@storybook/test": "^8.4.1",
 		"@swc/jest": "^0.2.37",
-		"@tailwindcss/postcss": "^4.0.14",
+		"@tailwindcss/postcss": "4.1.10",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
@@ -117,7 +117,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"postcss": "^8.4.47",
-		"tailwindcss": "^4.1.8",
+		"tailwindcss": "4.1.10",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3"
 	}
