--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -188,18 +188,14 @@ services:
   frontend-app:
     container_name: frontend-prod
     profiles: ["", "frontend"]
-    platform: linux/amd64
+    # platform: linux/amd64
     build:
       context: ./apps/frontend
       dockerfile: Dockerfile
     env_file: apps/frontend/.env
     environment:
-      - LOKI_HOST=http://loki:3100
+      # - LOKI_HOST=http://loki:3100
       - NODE_ENV=production
-    volumes:
-      - ./apps/frontend:/app
-      - /app/apps/frontend/node_modules
-      - /app/apps/frontend/.next
     ports:
       - 3000:3000
     # networks:
@@ -208,10 +204,10 @@ services:
     #   - monitoring
     depends_on:
       - backend-app
-    labels:
-      - "traefik.http.routers.frontend_app.rule=Host(`customai.cloud`)"
-      - "traefik.http.services.frontend_app.loadbalancer.server.port=3000"
-      - "logging=enabled"
+    # labels:
+    #   - "traefik.http.routers.frontend_app.rule=Host(`customai.cloud`)"
+    #   - "traefik.http.services.frontend_app.loadbalancer.server.port=3000"
+    #   - "logging=enabled"
 
   loki:
     image: grafana/loki:2.9.4
